--- a/config/database.yml
+++ b/config/database.yml
@@ -22,5 +22,5 @@ test:
 
 production:
   <<: *default
-  adapter: postgresql
-  database: db/production.sqlite3
+  adapter: mysql2
+  database: car_wash
